# perlinfieldbot

./: CMakeLists.txt  Dockerfile  LICENSE  PerlinNoise.h  README.md  aural.hpp  circle.cpp  fractal.cpp  fujii-animated.cpp  fujii-static.cpp  galaxies.cpp  perlin.cpp  sfmlpp.h  variations.h
app/: app.hpp
executables/: blur.frag
flame/: extrapolations.hpp  flame.hpp  truncations.hpp  variations.hpp
graphics/: graphics.hpp
math/: math.hpp  rnd.hpp
